# ashenstone_lorebook

./: book.toml  main.py  mkdocs.yml  pyproject.toml
docs/: 0.md  1-0-world_cultures.md  1-1a-culture_Tayn.md  1-1b-culture_Dwarven.md  1-1c-culture_Wuldan.md  1-1d-culture_Thringen.md  1-Characters.md  2-0-world_regions.md  2-1a-region_indip.md  2-1b-region_mulhong.md  2-1c-region_JewelSea.md  2-1d-1-subregion_greenrock.md  2-1d-region_Lynnla.md  2-2a-city_crag.md  2-2b-city_Laigfhuar.md  2-2c-city_Ashenstone.md  2-2d-city_Balnoorial.md  2-2f-city_Northanchor.md  2-3-1-Thorvir_the_Raven.md  2-3-3-Lady_Corrack.md  2-3-4-Queen_Shaheila.md  2-TabletsOfTorin.md  3-Session0.md  3-World_Timeline.md  AT-1-Characters.md  AT-2-TabletsOfTorin.md  AT-5-Session2.md  Journal-0-0.md  Journal-0-Companions.md  Journal-1-I.md  Journal-2-III.md  Journal-2-V.md  Journal-2-VII.md  Journal-99-Lightsong-Lore.md  contribution_instructions.md  index.md
includes/: abbreviations.md
src/: 1-0-world_cultures.md  1-1d-culture_Thringen.md  1-1e-culture_Kaldrinic.md  2-0-world_atlas.md  2-1a-region_indip.md  2-1b-region_mulhong.md  2-1c-region_JewelSea.md  2-1d-1-subregion_greenrock.md  2-1d-region_Lynnla.md  2-2a-city_crag.md  2-2b-city-Laigfhuar.md  2-2c-city_Ashenstone  2-2d-city_Balnoorial.md  2-2e-city_Lynnmouth.md  2-3-0-People_master.md  2-3-2-Lord_Corrack.md  2-3-3-Lady_Corrack.md  2-3-4-Queen_Shaheila.md  3-Timeline.md  3-World_Timeline.md  99-0-LJ-cover.md  99-0-campaign_2024 copy.md  99-1-characters.md  99-2-LJ-ch2-i.md  99-2-LJ-ch2-ii.md  99-2-LJ-ch2-iii.md  99-2-LJ-ch2.md  (+17 more)
(+71 files in other folders)
