[project]
name = "ashenstone-lorebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mdx-truly-sane-lists>=1.3",
    "mkdocs>=1.6.1",
    "mkdocs-include-markdown-plugin>=7.1.6",
    "mkdocs-material",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.12",
]
